add;intro,skills,code,contacts

--- a/index.html
+++ b/index.html
@@ -41,5 +41,73 @@
           </nav>
         </div>
     </header>
+    <main>
+      <section class="intro">
+        <div class="container">
+          <div class="intro-iner">
+            <div class="intro-left">
+              <img class="intro-img" src="img/IMG_20201028_122658_658 - копия.jpg"alt="Jenishbay">
+            </div>
+
+            <div class="intro-right">
+              <h1>Jenishbay Aytkulov</h1>
+              <h3>About me</h3>
+              <p>
+                I worked for many years in a team, and I got along well with everyone,
+                being a manager. I can also inspire people to new ideas, I also have
+                such qualities as responsibility, punctuality, communication skills
+                and the desire to create something new.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="container">
+          <h2 class="section-title">Contacts</h2>
+          <ul>
+            <li>
+              <h4>Location</h4>
+              <p>Bishkek, Kyrgyzystan</p>
+            </li>
+            <li>
+              <h4>Number</h4>
+              <a href="tel:+996505339333">0505-33-93-33</a>
+            </li>
+            <li>
+              <h4>Emaile</h4>
+              <a href="mailto:Aytkulov0803@gmaile.com">Aytkulov0803@gmaile.com</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="skills" class="skills section">
+        <div class="container">
+          <h2 class="section-title">Skills</h2>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>GitHub</li>
+            <li>Figma</li>
+          </ul>
+
+        </div>
+
+      </section>
+      <section id="code" class="code-exaple section">
+        <div class="container">
+          <h2 class="section-title">Code Exaple</h2>
+          <p><b>Texst:</b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto nam soluta dolore </p>
+          <pre>
+            <code>
+              function multiply(a, b) {
+                return a * b;
+              }
+            </code>
+          </pre>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
