--- a/index.html
+++ b/index.html
@@ -5,58 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jenishbay Aytkulov</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="header">
-        <div class="container">
-          <nav class="header-nav">
-            <a " href="#" class="header-logo">JA</a>
-            <ul class="header-menu">
-              <li class="header-menu-item">
-                <a href="#home" class="header-menu-link">Home</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#skills" class="header-menu-link">Skillls</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#code" class="header-menu-link">Code</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#portfolio" class="header-menu-link">Portfolio</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#lenguages" class="header-menu-link">Lenguages</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#education" class="header-menu-link">Education</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#contacts" class="header-menu-link">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+      <div class="container">
+        <nav class="header-nav">
+          <a href="#" class="header-logo">JA</a>
+          <ul class="header-menu">
+            <li class="header-menu-item">
+              <a href="#home" class="header-menu-link">Home</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#skills" class="header-menu-link">Skillls</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#code" class="header-menu-link">Code</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#portfolio" class="header-menu-link">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#languages" class="header-menu-link">Languages</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#education" class="header-menu-link">Education</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#contacts" class="header-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="intro">
         <div class="container">
           <div class="intro-iner">
             <div class="intro-left">
-              <img class="intro-img" src="img/IMG_20201028_122658_658 - копия.jpg"alt="Jenishbay">
+              <img
+                class="intro-img"
+                src="img/IMG_20201028_122658_658 - копия.jpg"
+                alt="Jenishbay"
+              />
             </div>
-
             <div class="intro-right">
               <h1>Jenishbay Aytkulov</h1>
               <h3>About me</h3>
               <p>
-                I worked for many years in a team, and I got along well with everyone,
-                being a manager. I can also inspire people to new ideas, I also have
-                such qualities as responsibility, punctuality, communication skills
-                and the desire to create something new.
+                I worked for many years in a team, and I got along well with
+                everyone, being a manager. I can also inspire people to new
+                ideas, I also have such qualities as responsibility,
+                punctuality, communication skills and the desire to create
+                something new.
               </p>
             </div>
           </div>
@@ -76,7 +83,9 @@
             </li>
             <li>
               <h4>Emaile</h4>
-              <a href="mailto:Aytkulov0803@gmaile.com">Aytkulov0803@gmaile.com</a>
+              <a href="mailto:Aytkulov0803@gmaile.com"
+                >Aytkulov0803@gmaile.com</a
+              >
             </li>
           </ul>
         </div>
@@ -91,14 +100,15 @@
             <li>GitHub</li>
             <li>Figma</li>
           </ul>
-
         </div>
-
       </section>
       <section id="code" class="code-exaple section">
         <div class="container">
           <h2 class="section-title">Code Exaple</h2>
-          <p><b>Texst:</b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto nam soluta dolore </p>
+          <p>
+            <b>Texst:</b>Lorem ipsum dolor sit amet consectetur, adipisicing
+            elit. Architecto nam soluta dolore
+          </p>
           <pre>
             <code>
               function multiply(a, b) {
@@ -108,6 +118,61 @@
           </pre>
         </div>
       </section>
+      <section id="education" class="education section">
+        <div class="container">
+          <h2 class="section-title">Education</h2>
+          <ul>
+            <li>
+              <h4>Hiht school</h4>
+              <em>2000-2011</em>
+            </li>
+            <li>
+              <h4>English course</h4>
+              <em>2016-2017</em>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="portfolio" class="portfolio section">
+        <div class="container">
+          <h2 class="section-title">Portfolio</h2>
+          <ul>
+            <li>
+              <h4>ASCS</h4>
+              <i>Warehouse Manager (2011-2014)</i>
+            </li>
+            <li>
+              <h4>Embassy of the Sate of Qatar</h4>
+              <i>Security (2017-2021)</i>
+            </li>
+            <li>
+              <h4>Embassy of Japan</h4>
+              <i>Security (2022- )</i>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="languages" class="languages section">
+        <div class="container">
+          <h2 class="section-title">Languages</h2>
+          <ul>
+            <li>
+              <h4>Kyrgyz-Native</h4>
+            </li>
+            <li>
+              <h4>Russian-Fluent</h4>
+            </li>
+            <li>
+              <h4>English-Elementary</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer class="footer section">
+      <div class="container">
+        <h4 class="section-title">&mdash; A J &mdash;</h4>
+      </div>
+    </footer>
   </body>
 </html>
